Demon Guide: Wording

--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
                     <br>Mitamas can be found in Aura Gate Floors 41-50 (recruitable as a Rare Encounter) and upon defeat can drop Mitama Extracts.
                   </p>
                   <p><strong>Sacrificing Mitamas/Using Extracts</strong></p>
-                  <p>As like sacrificing demons for skill points/evolve materials, mitama are used up for Infusion, with using extracts you have to use 5 at a time in order to boost up a stat.</p>
+                  <p>As like sacrificing demons for skill points/evolve materials, mitama are used up for Infusion boosting a primary stat by two and a secondary by one, with using extracts you have to use 5 at a time to boost a stat by one.</p>
                   <div class="DG-Table"><table class="DG-ToC">
                     <tr>
                       <td class="DG-Table-Label">Extract Type</td>
