--- a/index.html
+++ b/index.html
@@ -429,7 +429,9 @@
                   <p><strong>General:</strong></p>
                   <ul>
                     <li>Healing skills are affected by both Mag% and Healing Amount%, Tarukaja has no effect on it.</li>
-                    <li>Endure and Enduring Soul will activate in the order which you transferred to the demon. For example: Vishnu with Enduring Soul in slot 5 and Endure in slot 6 will activate Avatar first, followed by Enduring Soul, then Endure last</li>
+                    <li>Endure and Enduring Soul will activate in the order which you transferred to the demon. 
+                      <br>E.g. </strong> Has the same AI behaviour as Samarecarm, <strong><a href="javascript:void(0)" @click="show_guide_devil('Vishnu')">Vishnu</a></strong> with Enduring Soul in slot 5 and Endure in slot 6 
+                      will activate Avatar first, followed by Enduring Soul, then Endure last</li>
                   </ul>
                   
                   <p><strong>Counter Passives:</strong></p>
