--- a/index.html
+++ b/index.html
@@ -3389,7 +3389,7 @@
                 <!-- [Beelzebub] -->
                 <button id="Beelzebub" class="DG-CollapsibleButton" onclick="toggleCollapsible(this)">Beelzebub</button>
                 <div class="DG-Demon"><br>
-                  <p><strong><a href="javascript:void(0)" @click="show_guide_devil('Man Eater')">Demon Information</a></strong></p>
+                  <p><strong><a href="javascript:void(0)" @click="show_guide_devil('Beelzebub')">Demon Information</a></strong></p>
                   <p> Balanced unit with mid range stats (excluding luck) and excellent resistances (Null light/dark, resist force/elec). Beelzebub is a elec/dark oriented unit 
                       with Mudodyne, Mazionga and his unique dark skill Gluttony (aoe dark damage, heals himself based on 50% of damage done). If you face off against foes that 
                       don't ndr dark, he can self sustain and soak up a lot of hits in the process, easily suited for usage in V10 and Light Aether farming.
