--- a/index.html
+++ b/index.html
@@ -432,6 +432,8 @@
                     <li>Endure and Enduring Soul will activate in the order which you transferred to the demon. 
                       <br>E.g. </strong> Has the same AI behaviour as Samarecarm, <strong><a href="javascript:void(0)" @click="show_guide_devil('Vishnu')">Vishnu</a></strong> with Enduring Soul in slot 5 and Endure in slot 6 
                       will activate Avatar first, followed by Enduring Soul, then Endure last</li>
+                    <li>The AI is programmed so that it cannot use the same skill multiple times in a row. If using a Divine branded demon with a 4mp skill they would break out of the 0->4->0 cycle if their skill is used multiple times in a row</li>
+                    <li>In pvp if you start first: each demon begins with 2mp, if you start second: each demon begins with 5mp</li>
                   </ul>
                   
                   <p><strong>Counter Passives:</strong></p>
