Updated Michael and Skill descriptions

--- a/index.html
+++ b/index.html
@@ -1805,11 +1805,12 @@
                     </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
-                        <li>Resist Dark. If not Teal to cover his weakness.</li>
-                        <li>Light Boost. To increase Soul Judgement's damage </li>
-                        <li>Serial Killer/Butcher. To increase both Soul Judgement and Megidolaon's damage </li>
+                      <li>Resist Dark. If not Teal to cover his weakness.</li>
+                      <li>Light Boost/Amp. To increase Soul Judgement's damage </li>
+                      <li>Mana Aid. He's an excellent Sloth 10 farmer, Mana Aid further improves his efficiency allowing Soul Judgement spams at the start of every wave</li>
+                      <li>Serial Killer/Butcher. To increase both Soul Judgement and Megidolaon's damage </li>
                     </ul>
-                    <p><strong>Brands: </strong>Divine if you want two turn Megidolaon, Spell for Soul Judgement spam.</p>
+                    <p><strong>Brands: </strong>Divine if you want two turn Megidolaon or Mediarahan as Yellow, Spell for Soul Judgement spam.</p>
                     <p><a href="#DG-5StarDemons"><img class="DG-HomeButton" src="images/guides/HomeButton.png"></a></p>
                   </div>
                   
