Added Multi-Fusion component display for multifusion demons

--- a/index.html
+++ b/index.html
@@ -364,6 +364,10 @@
                 
                 <button class="DG-CollapsibleButton" onclick="toggleCollapsible(this)">Latest Updates</button>
                 <div class="DG-Demon"><br>
+                  <strong>[7/2]</strong>
+                  <ul>
+                    <li>Calculator: Multi-Fusion demons now list their components in the info tab</li>
+                  </ul>
                   <strong>[3/2]</strong>
                   <ul>
                     <li>Introduction: Added mention of skill levels being found on wiki</li>
