--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
                       <td><a href="#Shiva" onclick="openCollapsibleViaToC('Shiva')"><img src="images/devil/hakaisin_siva.png"><br>Shiva</a></td>
                       <td><a href="#Surt" onclick="openCollapsibleViaToC('Surt')"><img src="images/devil/maou_suruto.png"><br>Surt</a></td>
                       <td><a href="#Susano-o" onclick="openCollapsibleViaToC('Susano-o')"><img src="images/devil/hakaisin_susanoo.png"><br>Susano-o</a></td>
-                      <td><a href="#Thor" onclick="openCollapsibleViaToC('Rama')"><img src="images/devil/kisin_toru.png"><br>Thor</a></td>
+                      <td><a href="#Thor" onclick="openCollapsibleViaToC('Thor')"><img src="images/devil/kisin_toru.png"><br>Thor</a></td>
                       <td><a href="#Vishnu" onclick="openCollapsibleViaToC('Vishnu')"><img src="images/devil/majin_visyunu.png"><br>Vishnu</a></td>
                       <td><a href="#Zaou-Gongen" onclick="openCollapsibleViaToC('Zaou-Gongen')"><img src="images/devil/Zaou-Gongen.png"><br>Zaou-Gongen</a></td>
                     </tr>                      
