--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
                     <li>In the later floors, you'd require demons with Aura Gate trap related passives, preventing the effects of Damage Tiles and Dark Zone Tiles when figuring out the path to the boss</li>
                     <li>You can skip encounters by closing the app then reopening it, it'll place you back on the tile you were standing on before you started combat. If you were in the boss fight you'll immediately refight it from the beginning.</li>
                     <li>Hare of Inaba's unique passive "Trap Free" gives you the Void Dark Zone effect and damage reduction from Damage Panels (-30%). If you transfer Dmg Panel VI (-25%) and Dmg Panel VII (-50%), you can get immunity to 
-                    both negative tile effects in the one demon. I've done so for my Hare and so my general secondary team for 40 and 50 consist of mainly Hare other demons.</li>
+                    both negative tile effects in the one demon. I've done so for my Hare and so my general secondary team for 40 and 50 consist of mainly Hare + other demons.</li>
                   </ul>
                   
                   <div class="DG-Table"><table class="DG-ToC">
