wording and Zhong Kui fix

--- a/index.html
+++ b/index.html
@@ -1851,7 +1851,7 @@
                   <div class="DG-Demon"><br>
                     <p><strong><a href="javascript:void(0)" @click="show_guide_devil('Jeanne ☆')">Demon Information</a></strong></p>
                     <p>Collaboration event character, Jeanne from the Bayonetta series is built similarly as a mirror to Bayonetta, they both have the same stats and resistances, 
-                      except St and Ma being flipped meaning Jeanne is naturally more magic oriented. Jeanne is Bind oriented and can combo off Bayonetta's charm passive (and any charm source in general). 
+                      except St and Ma being flipped meaning Jeanne is naturally more magic focused. Jeanne is Bind oriented and can combo off Bayonetta's charm passive (and any charm source in general). 
                       Hades Blast gives her an innate phys aoe (though her strength stat is not that high), Madama Uppercut (passive) allows her to hit charmed foes with an almighty attack (also having 
                       a chance to bind them in the process, can be levelled to grant bonus ailment infliction % + evasion %) and Gomorrah (J) enables her to wipe once three turns is up, for sweeping as opposed to Bayonetta's 
                       version for boss killing.
