Updates mention and images

--- a/index.html
+++ b/index.html
@@ -390,8 +390,12 @@
                 </table></div><br>
                 
                 <!-- [Updates] -->
-                <button class="DG-CollapsibleButton" onclick="toggleCollapsible(this)">Latest Updates</button>
+                <button class="DG-CollapsibleButton" onclick="toggleCollapsible(this)">Latest Updates [14/2]</button>
                 <div class="DG-Demon"><br>
+                  <strong>[14/2]</strong>
+                  <ul>
+                    <li>Demon Updates: Bayonetta, Jeanne and Beloved done.</li>
+                  </ul>
                   <strong>[13/2]</strong>
                   <ul>
                     <li>Demon Updates: Bayonetta ☆ and Jeanne ☆ done.</li>
