--- a/index.html
+++ b/index.html
@@ -401,6 +401,8 @@
                 <div class="DG-Demon"><br>
                   <strong>[15/2]</strong>
                   <ul>
+                    <li>Calculator: Forward Fusions now listed for Halloweeen Jack and Helper Frost. They are new classified into a new group as well as Mishaguji.
+                    </li>
                     <li>Introduction: Updated Useful Resources</li>
                     <li>Demon Updates: Bayonetta ☆ and Jeanne ☆</li>
                     <li>Demon Guide: Added Chupacabra</li>
