--- a/index.html
+++ b/index.html
@@ -4231,7 +4231,7 @@
                   <ul>
                       <li>Resist Force. Mandatory given Force is used by many demons. He can easily be defeated by Cu Chulainn/Susano-o</li>
                       <li>Resist Light. Prevents enemies getting extra press turns. </li>
-                      <li>Samarecarm/Recarmdra. Some people prefer not to cover light weakness and get this instead. Even though he's Attack AI, he has been seeing using these skills.</li>
+                      <li>Samarecarm/Recarmdra. Some people prefer not to cover light weakness and get this instead.</li>
                   </ul>
                   <p><strong>Brands: </strong>Life and Shield is the best combination for survival</p>
                   <p><a href="#DG-NotableDemons"><img class="DG-HomeButton" src="images/guides/HomeButton.png"></a></p>
