Fixed bug with Event demons appearing in cheapest fusion paths

--- a/index.html
+++ b/index.html
@@ -1863,6 +1863,7 @@
                       <li>Assassin/Master Assassin. Boosts all of her damage sources.</li>
                       <li>Good/Great Aim. If you're worried about her accuracy, this can help patch it up</li>
                       <li>Deadly Charm. Boost damage done to charmed foes. Since she'll be able to inflict it, enemies that survive/are charmed will be hit even harder</li>
+                      <li>Phys Aoe. For sweeping, if you require pierce then you should run her with Hell Biker + Zaou-Gongen. Zaou by himself if you give her Rebellion as well.</li>
                       <li>Mana Aid. Pve purposes, pair this with a spammable phys aoe and a good crit rate and she can be an excellent farmer.</li>
                     </ul>
                     <p><strong>Brands: </strong> Divine if you want more ability spamming, War for more phys damage. Focus on Patk%, crit%, accuracy% and Matk% stats.
