--- a/index.html
+++ b/index.html
@@ -1998,7 +1998,7 @@
                       <ul>
                         <li><strong>Madama Uppercut:</strong> Only activates once per action regardless of the skill used. 
                           If a multi-hit skill or aoe charms multiple targets then out of the enemies charmed, the leftmost target will be hit by Uppercut.</li>
-                        <li><strong>Madama Uppercut:</strong> Will be activated by Mother Harlot's Death Lust </li> 
+                        <li><strong>Madama Uppercut:</strong> Will be activated by Mother Harlot's Death Lust, Dionysus' Euphoric Frenzy</li>
                         <li><strong>Gomorrah (J):</strong> Will tick down whenever it is her turn. If she's dead then it won't tick down.</li>
                       </ul>
                     </p>
