Fixed mistakes pointed out by user

--- a/index.html
+++ b/index.html
@@ -579,8 +579,8 @@
                       <td><strong>Red:</strong><br>Bloody Glee</td>
                       <td><strong>Red:</strong><br>Binding Claw<br><strong>Purple:</strong><br>Retaliate</td>
                       <td><strong>Teal:</strong><br>Madness</td>
-                      <td><strong>Yellow:</strong><br>Dodge</td>
                       <td><strong>Innate:</strong><br>Endure</td>
+                      <td><strong>Yellow:</strong><br>Dodge</td>
                       <td><strong>Yellow:</strong><br>Good Aim</td>
                     </tr>
                       <td><a href="javascript:void(0)" @click="show_guide_devil('Jatayu')"><img src="images/devil/Jatayu.png"></a></td>
@@ -596,7 +596,7 @@
                       <td><a href="javascript:void(0)" @click="show_guide_devil('Zouchouten')"><img src="images/devil/Zouchouten.png"></a></td>
                     </tr><tr>
                       <td><strong>Yellow:</strong><br>Madness</td> 
-                      <td><strong>Yellow:</strong><br>Bloody Glee</td>
+                      <td><strong>Purple:</strong><br>Bloody Glee</td>
                       <td><strong>Purple:</strong><br>Bloody Glee</td>
                       <td><strong>Purple:</strong><br>Retaliate<br><strong>Teal:</strong><br>Good Aim</td>
                       <td><strong>Purple:</strong><br>Mind Break<br><strong>Teal:</strong><br>Sweet Bite</td>
